--- a/server/settings.json
+++ b/server/settings.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "address" : "localhost",
+  "host" : "localhost",
   "port" : "8080",
   "gorm" : {
     "type" : "postgres",
