--- a/cmd/server/settings.json
+++ b/cmd/server/settings.json
@@ -5,8 +5,8 @@
   "port" : "8080",
   "gorm" : {
     "type" : "postgres",
-    "host" : "localhost",
-    "port" : "45432",
+    "host" : "postgres",
+    "port" : "5432",
     "user" : "postgres",
     "password" : "postgres",
     "database" : "main",
